# docs-python

./: LICENSE  README.md  Taskfile.yml  blueprint-contributing.md  blueprint-readme.md  common.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  variables.json
.config/: package-lock.json
local/: package-lock.json
local/slim/: exe.txt  install.txt
readme/: contributing-details.md  quick-description.md  requirements.md  subheader.md
