[tool.poetry]
name = "docs-python"
version = "0.0.1"
description = "Documentation partials used to generate documentation for Python projects"
authors = ["Brian Zalewski <brian@megabyte.space>"]
license = "MIT"
readme = "README.md"
homepage = "https://megabyte.space"
documentation = "https://megabyte.space/docs/documentation/python"
keywords = ["cli", "common", "docs", "documentation", "megabytelabs", "npm", "package", "partials", "professormanhattan", "pypi", "python", "shared"]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"

[tool.poetry.dev-dependencies]
blocklint = "^0.2.3"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
yamllint = "^1.26.3"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/documentation/python/-/issues"
"GitHub" = "https://github.com/ProfessorManhattan/docs-python"
"GitLab" = "https://gitlab.com/megabyte-labs/documentation/python"
"Give Directly" = "https://givedirectly.org"
"Open Collective" = "https://opencollective.com/megabytelabs"
"Patreon" = "https://www.patreon.com/ProfessorManhattan"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
